src/app/shared/components/date-picker/date-picker.component.scss
.date-picker--container {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-x2);
}

.more-section--inputs {
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-items: center;
  margin-top: var(--spacing-x3);
  width: 100%;

  app-input-date {
    flex: 1;
    min-width: 0;
  }
}

.offset-buttons {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--spacing-x2);

  .selected {
    border-color: var(--color-primary);
  }

  button {
    padding: var(--spacing-x1) var(--spacing-x2);
    flex: 1;
  }
}

.date-picker--popup-calendar {
  display: flex;
  gap: var(--spacing-x6);
  position: absolute;
  width: 100%;
  z-index: 1000;
  background-color: var(--color-bg-base);
}

